--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wallet-accounts",
   "version": "0.0.0",
   "private": true,
-  "description": "Wallet with multi-accounts as a smart contract",
+  "description": "Wallet with sub-accounts as a smart contract",
   "main": "index.js",
   "scripts": {
     "test": "standard && brittle test.js"
